fix homepage & add cn

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -5,6 +5,9 @@
 - id: blogHeading
   translation: "Blog"
 
+- id: lifeHeading
+  translation: "Life"
+
 - id: pageNotFound
   translation: "Sorry, this page does not exist."
 
